--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,11 +150,11 @@ jobs:
     strategy: 
       matrix:
         target: [ 
-          i686-pc-windows-gnu,
-          i686-pc-windows-msvc,
+          # i686-pc-windows-gnu,
+          # i686-pc-windows-msvc,
           x86_64-pc-windows-gnu,
           x86_64-pc-windows-msvc,
-          aarch64-pc-windows-msvc 
+          # aarch64-pc-windows-msvc 
           ]
     if: always()
     steps:
