--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -227,10 +227,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: "https://registry.npmjs.org"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
+          CI: true
 
       - name: Release Node Host SDK
         env:
-          NPM_TOKEN: ${{ secrets.NPM_API_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_API_TOKEN }}
           CI: true
         run: |
           cd node
