test(python-sdk): Add unit tests for python SDK and run in CI (#42)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
           cd python
           poetry install
           poetry run python example.py
+          poetry run python -m unittest discover
 
       - name: Setup Ruby env
         uses: ruby/setup-ruby@v1
