fix(ruby-sdk): Fix bugs and add tests (#41)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
           cd ruby
           bundle install
           ruby example.rb
+          rake test
 
       - name: Setup Node env
         uses: actions/setup-node@v3
