--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,9 @@ jobs:
       - name: Test Go Host SDK
         run: |
           go version
-          cd go && LD_LIBRARY_PATH=/usr/local/lib go run main.go
+          cd go
+          LD_LIBRARY_PATH=/usr/local/lib go run main.go
+          LD_LIBRARY_PATH=/usr/local/lib go test
 
       - name: Setup Python env
         uses: actions/setup-python@v4
