test(browser-runtime): Add a simple test and runner (#73)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -225,6 +225,12 @@ jobs:
           LD_LIBRARY_PATH=/usr/local/lib npm run example
           LD_LIBRARY_PATH=/usr/local/lib npm run test
 
+      - name: Test Browser Runtime
+        run: |
+          cd browser
+          npm i
+          npm run test
+
   ocaml:
     name: OCaml
     needs: lib
