--- a/.github/workflows/release-ruby.yaml
+++ b/.github/workflows/release-ruby.yaml
@@ -21,5 +21,5 @@ jobs:
           RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_TOKEN }}
         run: |
           cd ruby
-          make publish
+          make publish RUBYGEMS_API_KEY=$RUBYGEMS_API_KEY
       
