refactor(haskell):  cleanup haskell SDK to prepare for release (#138)
- Switches from `stack` to `cabal`
- Cleanup SDK code
- Adds release action (still waiting on Hackage upload approval)

Co-authored-by: Steve Manuel <steve@dylib.so>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -284,23 +284,24 @@ jobs:
       - name: Setup Haskell env
         uses: haskell/actions/setup@v2
         with:
-          enable-stack: true
-          stack-version: "latest"
+          enable-stack: false
       - name: Cache Haskell
         id: cache-haskell
         uses: actions/cache@v3
         with:
-          path: .stack-work
+          path: ./haskell/dist-newstyle
           key: ${{ runner.os }}-haskell-${{ hashFiles('haskell/**') }}
       - name: Build Haskell Host SDK
         if: steps.cache-haskell.outputs.cache-hit != 'true'
         run: |
           cd haskell
-          LD_LIBRARY_PATH=/usr/local/lib stack build
+          cabal update
+          LD_LIBRARY_PATH=/usr/local/lib cabal build
       - name: Test Haskell SDK
         run: |
           cd haskell
-          LD_LIBRARY_PATH=/usr/local/lib stack test
+          cabal update
+          LD_LIBRARY_PATH=/usr/local/lib cabal test
 
   php:
     name: PHP
