ci: use glob for paths (#178)

--- a/.github/workflows/ci-cpp.yml
+++ b/.github/workflows/ci-cpp.yml
@@ -1,12 +1,12 @@
 on: 
   pull_request:
     paths:
-      - .github/actions/extism
+      - .github/actions/extism/**
       - .github/workflows/ci-cpp.yml
-      - manifest/
-      - runtime/
-      - libextism/
-      - cpp/
+      - manifest/**
+      - runtime/**
+      - libextism/**
+      - cpp/**
   workflow_dispatch:
 
 name: C++ CI
