--- a/.github/workflows/ci-ruby.yml
+++ b/.github/workflows/ci-ruby.yml
@@ -1,12 +1,12 @@
 on: 
   pull_request:
     paths:
-      - .github/actions/extism
+      - .github/actions/extism/**
       - .github/workflows/ci-ruby.yml
-      - manifest/
-      - runtime/
-      - libextism/
-      - ruby/
+      - manifest/**
+      - runtime/**
+      - libextism/**
+      - ruby/**
   workflow_dispatch:
 
 name: Ruby CI
